# esp32_basic_pjt

./: README.md
pk_app/: CMakeLists.txt  Makefile  run.sh  sdkconfig  sdkconfig.old
pk_app/main/: CMakeLists.txt  TaskType.h  petkit_clog.h  pkDevGPIO.c  pkDevGPIO.h  pkDevTime.c  pk_T3_driver.c  pk_T3_driver.h  pk_app.c  pk_app.h  pk_app_config.h  pk_hal.c  pk_hal.h  pk_serial.c  pk_serial.h  pk_version.h  pkjig_comm_table.h  pkjig_serial.c  pkjig_serial.h  product_test.c  product_test.h  queue.c  queue.h  serial_comm_table.h  sys_main.c  user_config.h  user_lib.c  user_lib.h  user_time.h
